old/kubernetes/helm/http-echo/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: http-echo
  labels:
    name: http-ech
